--- a/Packages.props
+++ b/Packages.props
@@ -43,7 +43,7 @@
     <PackageReference Update="nunit" Version="3.13.3" />
     <PackageReference Update="nunit3testadapter" Version="4.5.0" />
     <PackageReference Update="nunit.console" version="3.16.3" />
-    <PackageReference Include="Microsoft.VisualStudio.TestPlatform" Version="14.0.0" />
+    <PackageReference Update="Microsoft.VisualStudio.TestPlatform" Version="17.6.3" />
     <PackageReference Update="xunit" Version="2.5.1" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.5.1" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.7.2" />
