--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -6,8 +6,7 @@ steps:
     KeyVaultName: 'ado-secrets'
     SecretsFilter: 'github-distro-mixin-password,ado-crossplatbuildscripts-password'
 
-- powershell: |
-    git clone https://$(ado-crossplatbuildscripts-password)@dev.azure.com/mssqltools/_git/CrossPlatBuildScripts
+- checkout: git://mssqltools/_git/CrossPlatBuildScripts
   displayName: Clone CrossPlatBuildScripts
 
 - task: DownloadBuildArtifacts@0
