--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -6,7 +6,7 @@ steps:
     KeyVaultName: 'ado-secrets'
     SecretsFilter: 'github-distro-mixin-password,ado-crossplatbuildscripts-password'
 
-- checkout: git://dev.azure.com/mssqltools/_git/CrossPlatBuildScripts
+- checkout: git://CrossPlatBuildScripts/CrossPlatBuildScripts
   displayName: Clone CrossPlatBuildScripts
 
 - task: DownloadBuildArtifacts@0
