changed isPreRelease to false

--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -32,4 +32,4 @@ steps:
       '$(Build.SourcesDirectory)/artifacts/package/*.zip'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
-    isPreRelease: true
+    isPreRelease: false
