--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -9,13 +9,13 @@ steps:
     downloadPath: '$(Agent.TempDirectory)'
 
 - task: CopyFiles@2
-  displayName: 'Copy build drop artifacts to: $(Build.ArtifactStagingDirectory)'
+  displayName: 'Copy build drop artifacts to: $(Build.ArtifactStagingDirectory)/artifacts/package'
   inputs:
     SourceFolder: '$(Agent.TempDirectory)/drop'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/artifacts/package'
 
 - script: |
-    cd $(Build.ArtifactStagingDirectory)
+    cd $(Build.ArtifactStagingDirectory)/artifacts/package
     rm Microsoft.SqlTools.ServiceLayer-osx-arm64-unsigned-net8.0.tar.gz
     rm Microsoft.SqlTools.Migration-osx-arm64-unsigned-net8.0.tar.gz
   displayName: 'Delete the unsigned arm64-osx packages'
