Revert "Added back in artifacts package"
This reverts commit 799e41e14ea49b5f29e9ab90b99aa8a992d9d1eb.

--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -9,13 +9,13 @@ steps:
     downloadPath: '$(Agent.TempDirectory)'
 
 - task: CopyFiles@2
-  displayName: 'Copy build drop artifacts to: $(Build.ArtifactStagingDirectory)/artifacts/package'
+  displayName: 'Copy build drop artifacts to: $(Build.ArtifactStagingDirectory)'
   inputs:
     SourceFolder: '$(Agent.TempDirectory)/drop'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/artifacts/package'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - script: |
-    cd $(Build.ArtifactStagingDirectory)/artifacts/package
+    cd $(Build.ArtifactStagingDirectory)
     rm Microsoft.SqlTools.ServiceLayer-osx-arm64-unsigned-net8.0.tar.gz
     rm Microsoft.SqlTools.Migration-osx-arm64-unsigned-net8.0.tar.gz
   displayName: 'Delete the unsigned arm64-osx packages'
