--- a/nuget.config
+++ b/nuget.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+    <!--
+      Where packages should go.  Visual Studio will provide a default value of $(SolutionDir) but command-line based
+      package restores could end up in a different location.  Setting this value keeps Visual Studio and NuGet.exe
+      in sync for packages.config based restores.
+    -->
+    <add key="repositoryPath" value=".\.packages" />
+  </config>
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
