--- a/nuget.config
+++ b/nuget.config
@@ -6,6 +6,7 @@
       package restores could end up in a different location.  Setting this value keeps Visual Studio and NuGet.exe
       in sync for packages.config based restores.
     -->
+    <add key="globalPackagesFolder" value=".packages" />
     <add key="repositoryPath" value=".packages" />
   </config>
   <packageSources>
