Address comment and add repo path and global packages folder to cake-bootstrap, hoping test nugets are restored properly

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -305,7 +305,7 @@ steps:
   displayName: 'Package nuspec projects'
   inputs:
     filename: build.cmd
-    arguments: '-target=DotnetPackNuspec -mono'
+    arguments: '-target=NugetPackNuspec -mono'
     
 - task: BatchScript@1
   displayName: "Build and Package service tool projects"
