Added continue on error for release task

--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -34,3 +34,4 @@ steps:
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
     isPreRelease: false
+    continueOnError: true
