--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -58,10 +58,6 @@ steps:
   inputs:
     useGlobalJson: true
 
-- pwsh: |
-    Get-Volume C
-  displayName: 'Check disk space'
-
 - task: PowerShell@2
   displayName: 'Add version number to SqlCore project for packaging'
   inputs:
@@ -82,7 +78,7 @@ steps:
   displayName: 'Run script build.cmd'
   inputs:
     filename: build.cmd
-    arguments: '-target=test -mono'
+    arguments: '-target=all -mono'
     
 - task: DotNetCoreCLI@2
   displayName: 'dotnet restore test/Microsoft.SqlTools.ServiceLayer.UnitTests'
