--- a/azure-pipelines/integrationtests.yml
+++ b/azure-pipelines/integrationtests.yml
@@ -63,19 +63,12 @@ steps:
     env:
       sqlOnPrem_password: '$(sqlOnPrem_password)'
 
-  # Uncomment tasks that use secrets while we get context on managed identity
-  # - task: AzureKeyVault@1
-  #   displayName: 'Azure Key Vault: SqlToolsSecretStore'
-  #   inputs:
-  #     azureSubscription: 'STS Pipelines' # this is the name of the service connection, which be found in mssqltools/CrossPlatBuildScripts ADO under Project Settings -> Service Connections
-  #     KeyVaultName: SqlToolsSecretStore
-  #     SecretsFilter: 'sqltools-backup-url-tests-blobcontaineruri,sqltools-backup-url-tests-storageaccountname,sqltools-backup-url-tests-storageaccountkey'
-
   - task: DotNetCoreCLI@2
     displayName: Building Integration Tests
     inputs:
       projects: '**/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj'
 
+  # Commenting out integration tests while we figure out how to restructure this
   # - task: DotNetCoreCLI@2
   #   displayName: Running Integration Tests
   #   inputs:
