--- a/azure-pipelines/localization.yml
+++ b/azure-pipelines/localization.yml
@@ -18,6 +18,11 @@ jobs:
   - checkout: self
     fetchDepth: 1
     persistCredentials: True
+
+  - script: call build.cmd --target=SRGen
+    displayName: Generate xlf files
+    workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
+
   - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
@@ -27,4 +32,3 @@ jobs:
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
-...
