Fix loc task config in pipeline script

--- a/azure-pipelines/localization.yml
+++ b/azure-pipelines/localization.yml
@@ -23,8 +23,9 @@ jobs:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
     inputs:
       locProj: 'src/LocProject.json'
+      outDir: '$(Build.ArtifactStagingDirectory)'
       packageSourceAuth: patAuth
+      patVariable: '$(OneLocBuildPat)'
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
-...
