--- a/azure-pipelines/localization.yml
+++ b/azure-pipelines/localization.yml
@@ -19,9 +19,8 @@ jobs:
     fetchDepth: 1
     persistCredentials: True
 
-  - script: call .\build.cmd --target=SRGen
+  - script: call build.cmd --target=SRGen
     displayName: Generate xlf files
-    workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
 
   - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
     env:
