--- a/azure-pipelines/localization.yml
+++ b/azure-pipelines/localization.yml
@@ -18,6 +18,10 @@ jobs:
   - checkout: self
     fetchDepth: 1
     persistCredentials: True
+
+  - script: call build.cmd --target=SRGen
+    displayName: Generate xlf files
+
   - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
