--- a/azure-pipelines/templates/include-build.yml
+++ b/azure-pipelines/templates/include-build.yml
@@ -35,9 +35,11 @@ steps:
       $props.Project.PropertyGroup.Version = $version;
       $props.Save($projectFile)
 
-- script: call build.cmd -target=all -mono
+- task: BatchScript@1
   displayName: 'Run script build.cmd'
-  workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
+  inputs:
+    filename: build.cmd
+    arguments: '-target=all -mono'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet test test/Microsoft.SqlTools.ServiceLayer.UnitTests'
