--- a/azure-pipelines/templates/include-nugetPackageGeneration.yml
+++ b/azure-pipelines/templates/include-nugetPackageGeneration.yml
@@ -5,34 +5,46 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      $projectFile = '$(Build.SourcesDirectory)\sqltoolsservice\src\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.csproj'
+      $projectFile = '$(Build.SourcesDirectory)\src\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.csproj'
       $props = New-Object XML
       $props.Load($projectFile)
       $propGroup = $props.Project.PropertyGroup;
-      $versionPre = '$(ManagedBatchParserMajor)' + '.' + '$(ManagedBatchParserMinor)' + '.'
-      if('$(StableRelease)'.Equals('true')) {
+      $versionPre = $env:ManagedBatchParserMajor + '.' + $env:ManagedBatchParserMinor + '.'
+      if($env:StableRelease.Equals('true')) {
           $version = $versionPre + '0';
       } else {
           $version = $versionPre + $(Build.BuildNumber) + '-' + $propGroup.VersionSuffix.'#text'
       }
-      $nuspecFile = '$(Build.SourcesDirectory)\sqltoolsservice\packages\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.nuspec'
+      $nuspecFile = '$(Build.SourcesDirectory)\packages\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.nuspec'
       $nuspec = New-Object XML
       $nuspec.Load($nuspecFile)
       $nuspec.package.metadata.version = $version;
       $nuspec.Save($nuspecFile)
+
+- task: Npm@1
+  displayName: 'npm install -g gulp-cli'
+  inputs:
+    command: custom
+    verbose: false
+    customCommand: 'install -g gulp-cli'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet pack sqlcore'
   inputs:
     command: custom
     custom: pack
-    arguments: '--output $(Build.ArtifactStagingDirectory)\nugetPackages --no-build --configuration Release -v n $(Build.SourcesDirectory)\sqltoolsservice\src\Microsoft.SqlTools.SqlCore\Microsoft.SqlTools.SqlCore.csproj'
+    arguments: '--output $(Build.SourcesDirectory)\artifacts\nugetPackages --no-build --configuration $(buildConfiguration) -v n src\Microsoft.SqlTools.SqlCore\Microsoft.SqlTools.SqlCore.csproj'
 
-- script: call build.cmd -target=NugetPackNuspec -mono
+- task: BatchScript@1
   displayName: 'Package nuspec projects'
-  workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
-
-- script: call build.cmd -target=dotnetpackservicetools -mono
-  displayName: 'Build and Package service tool projects'
-  workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
-  env: { BUILD_DOTNET_TOOL: true }
+  inputs:
+    filename: build.cmd
+    arguments: '-target=NugetPackNuspec -mono'
+    
+- task: BatchScript@1
+  displayName: "Build and Package service tool projects"
+  env:
+    BUILD_DOTNET_TOOL: "true"
+  inputs:
+    filename: build.cmd
+    arguments: "-target=dotnetpackservicetools -mono"
