--- a/azure-pipelines/build-and-release.yml
+++ b/azure-pipelines/build-and-release.yml
@@ -31,9 +31,5 @@ stages:
       demands:
       - ImageOverride -equals ADS-Windows_Image
     steps:
-    - template: azure-pipelines/templates/include-archive.yml
-
-    - template: azure-pipelines/templates/include-build.yml
-
-    - template: azure-pipelines/templates/include-nugetPackageGeneration.yml
+    - template: build.yml
     timeoutInMinutes: 90
