--- a/azure-pipelines/PullRequest.yml
+++ b/azure-pipelines/PullRequest.yml
@@ -31,9 +31,9 @@ stages:
       demands:
       - ImageOverride -equals ADS-Windows_Image
     steps:
-    - template: azure-pipelines/templates/include-archive.yml
+    - template: templates/include-archive.yml
 
-    - template: azure-pipelines/templates/include-build.yml
+    - template: templates/include-build.yml
 
-    - template: azure-pipelines/templates/include-nugetPackageGeneration.yml
+    - template: templates/include-nugetPackageGeneration.yml
     timeoutInMinutes: 90
