--- a/azure-pipelines/templates/include-build.yml
+++ b/azure-pipelines/templates/include-build.yml
@@ -37,7 +37,7 @@ steps:
 
 - script: call build.cmd -target=all -mono
   displayName: 'Run script build.cmd'
-  workingDirectory: $(Build.SourcesDirectory)\sqltoolsservice
+  workingDirectory: $(Build.SourcesDirectory)/sqltoolsservice
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet test test/Microsoft.SqlTools.ServiceLayer.UnitTests'
