add custom checkout step to fix path

--- a/azure-pipelines/PullRequest.yml
+++ b/azure-pipelines/PullRequest.yml
@@ -31,6 +31,10 @@ stages:
       demands:
       - ImageOverride -equals ADS-Windows_Image
     steps:
+    - checkout: sqltoolsservice
+        path: s/sqltoolsservice
+        displayName: 'Checkout sqltoolsservice github repo'
+        clean: 'true'
     - template: templates/include-build.yml
 
     - template: templates/include-archive.yml
