--- a/azure-pipelines/PullRequest.yml
+++ b/azure-pipelines/PullRequest.yml
@@ -1,40 +1,89 @@
-trigger: none
-pr: none
+#################################################################################
+#                         OneBranch Pipelines - Official                        #
+# This pipeline was created by EasyStart from a sample located at:              #
+#   https://aka.ms/obpipelines/easystart/samples                                #
+# Documentation:  https://aka.ms/obpipelines                                    #
+# Yaml Schema:    https://aka.ms/obpipelines/yaml/schema                        #
+# Retail Tasks:   https://aka.ms/obpipelines/tasks                              #
+# Support:        https://aka.ms/onebranchsup                                   #
+#################################################################################
+
+trigger: none # https://aka.ms/obpipelines/triggers
+
+parameters: # parameters are shown up in ADO UI in a build queue time
+- name: 'debug'
+  displayName: 'Enable debug output'
+  type: boolean
+  default: false
+- name: 'stsGithubBranch'
+  displayName: 'STS GitHub Branch'
+  type: string
+  default: 'main'
 
 variables:
-  # Major version number for the release
-- name: Major
-  value: '5'
-  # Minor version number for the release (should be incremented post a stable release)
-- name: Minor
-  value: '0'
-  # Patch version number for the release (should be incremented in release branch once one is created)
-- name: Patch
-  value: '0'
+  - name: CDP_DEFINITION_BUILD_COUNT # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
+    value: $[counter('', 0)]
+  - name: system.debug
+    value: ${{ parameters.debug }}
+  - name: NUGET_XMLDOC_MODE
+    value: none
+  - template: templates\buildVariables.yml
+  - name: WindowsContainerImage # Docker image which is used to build the project https://aka.ms/obpipelines/containers
+    value: 'onebranch.azurecr.io/windows/ltsc2019/vse2022:latest' 
 
-stages:
-- stage: Build
-  variables:
-  - name: buildConfiguration
-    value: 'Release'
-  - name: ManagedBatchParserMajor
-    value: '4'
-  - name: ManagedBatchParserMinor
-    value: '0'
-    # Set to true to build a stable release.
-  - name: StableRelease
-    value: 'false'
-  jobs:
-  - job: Build
-    pool:
-      name: 'ads-build-1es-hosted-pool'
-      demands:
-      - ImageOverride -equals ADS-Windows_Image
-    steps:
+resources:
+  repositories: 
+    - repository: templates
+      type: git
+      name: OneBranch.Pipelines/GovernedTemplates
+      ref: refs/heads/main
+    - repository: SqlToolsService
+      type: github
+      endpoint: Github_Microsoft
+      name: microsoft/sqltoolsservice
+      ref: ${{ parameters.stsGithubBranch }}
+
+extends:
+  template: v2/OneBranch.Official.CrossPlat.yml@templates # https://aka.ms/obpipelines/templates
+  parameters:
+    cloudvault: # https://aka.ms/obpipelines/cloudvault
+      enabled: false
+    globalSdl: # https://aka.ms/obpipelines/sdl
+      #asyncSdl:
+      #  enabled: true
+      #  tsaOptionsFile: .config/tsaoptions.json
+      tsa:
+        enabled: false # onebranch publish all sdl results to TSA. If TSA is disabled all SDL tools will forced into 'break' build mode.
+      # credscan:
+      #   suppressionsFile: $(Build.SourcesDirectory)\.config\CredScanSuppressions.json
+      #binskim:
+      #  break: true # always break the build on binskim issues in addition to TSA upload
+      policheck:
+        break: true # always break the build on policheck issues. You can disable it by setting to 'false'
+      # suppression:
+      #   suppressionFile: $(Build.SourcesDirectory)\.gdn\global.gdnsuppress
+      perStage:
+          sdl_sources:
+            checkout_all_repos: true
+
+    stages:
+    - stage: Build
+
+      jobs:
+      - job: Build
+        pool:
+          type: windows
+
+        variables:
+          ob_outputDirectory: '$(Build.ArtifactStagingDirectory)'  # this directory is uploaded to pipeline artifacts, reddog and cloudvault. More info at https://aka.ms/obpipelines/artifacts
+          ob_artifactBaseName: 'drop_Build'
+        
+        steps: # These steps will be run in unrestricted container's network
     - checkout: sqltoolsservice
         path: s/sqltoolsservice
         displayName: 'Checkout sqltoolsservice github repo'
         clean: 'true'
+
     - template: templates/include-build.yml
 
     - template: templates/include-archive.yml
