--- a/azure-pipelines/PullRequest.yml
+++ b/azure-pipelines/PullRequest.yml
@@ -84,11 +84,11 @@ extends:
           displayName: 'Checkout sqltoolsservice github repo'
           clean: 'true'
 
-        - template: .pipelines\include-build.yml@self
+        - template: templates\include-build.yml@self
 
-        - template: .pipelines\include-nugetPackageGeneration.yml@self
+        - template: templates\include-nugetPackageGeneration.yml@self
 
-        - template: .pipelines\include-archive.yml@self
+        - template: templates\include-archive.yml@self
 
         
         timeoutInMinutes: 100
